MySql adaptation and first migration

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-89aacc9a-6c9b-4a96-8a11-81c79ccda3b8;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "Server=localhost;userid=root;password=bwy6932guz;database=saleswebmvcappdb"
+  },
+
+  //Atualização manual
+    "sdk": {
+      "version": "2.2.0"
+    
   }
 }
